Update changes-added tailwind and email controller edited

--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -1,6 +1,4 @@
-/* Navbar Styling */
-
-body {
+Navbar Styling */ body {
   padding-top: 80px;
 
 }
@@ -298,4 +296,4 @@ button {
 /* .no-scroll {
   overflow: hidden;
   height: 100vh;
-} */
+}
