--- a/client/src/components/Contactus/contactus.css
+++ b/client/src/components/Contactus/contactus.css
@@ -1,38 +1,14 @@
-/* .contact-container {
-  width: 400px;
-  margin: 50px auto;
-  padding: 20px;
-  background-color: #e0f7fa;
-  border-radius: 8px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  text-align: center;
-}
-
-form {
+.home {
+  min-width: 100vh;
   display: flex;
   flex-direction: column;
-  gap: 10px;
 }
 
-input {
-  padding: 10px;
-  border: 1px solid #b3e5fc;
-  border-radius: 5px;
-  font-size: 16px;
+.contact-container {
+  width: 100%;
+  max-width: 1440px;
+  margin: 0px auto;
+  padding: 80px 120px;
 }
 
-button {
-  background-color: #007bb5;
-  color: white;
-  padding: 10px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
-}
 
-.response-message {
-  margin-top: 10px;
-  color: green;
-  font-weight: bold;
-} */
