--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,4 +1,11 @@
-.footer {
+.footer-container {
+  width: 100%;
+  max-width: 1440px;
+  margin: 0px auto;
+  padding: 40px 20px 0px 20px;
+}
+
+/* .footer {
   background-color: var(--footer-background);
   color: white;
   padding: 3rem 2rem 1rem;
@@ -56,4 +63,4 @@
   padding-top: 2rem;
   border-top: 1px solid #374151;
   color: #9ca3af;
-}
+} */
