UI changes fixed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,2 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700&display=swap");
 
+.page-main {
+  width: full;
+  max-width: 1440px;
+  margin: 0 auto;
+}
