--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700&display=swap");
 
 .page-main {
-  width: full;
+  width: 100%;
   max-width: 1440px;
   margin: 0 auto;
+}
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.main-content {
+  flex: 1;
+  height: 100vh;
 }
