--- a/client/src/components/Hero.css
+++ b/client/src/components/Hero.css
@@ -1,11 +1,11 @@
 .hero {
   width: 100%;
-  background-color: #273e47;
+  min-width: 1440px;
   color: white;
   padding: 80px 20px;
   display: flex;
   justify-content: center;
-
+  margin-top: 79px;
 }
 
 .hero-container {
