--- a/client/src/components/Mentor/Mentor.css
+++ b/client/src/components/Mentor/Mentor.css
@@ -12,7 +12,7 @@
   justify-content: space-between;
   align-items: center;
   gap: 30px;
-  padding: 0 20px;
+  padding: 80px 20px;
   margin: 0 auto;
   /* Centers the container */
 }
