--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700&display=swap");
 
-.page-main {
+/* .page-main {
   width: 100%;
   max-width: 1440px;
   margin: 0 auto;
@@ -15,4 +15,4 @@
 .main-content {
   flex: 1;
   height: 100vh;
-}
+} */
