--- a/client/src/components/Helpsection/Helpsection.css
+++ b/client/src/components/Helpsection/Helpsection.css
@@ -1,4 +1,4 @@
-.helpsection_widgets {
+/* .helpsection_widgets {
   background-color: var(--primary-color);
 }
 
@@ -7,4 +7,4 @@
   max-width: 1440px;
   margin: 0 auto;
   padding: 80px 40px;
-}
+} */
