--- a/client/src/components/Contactus/contactus.css
+++ b/client/src/components/Contactus/contactus.css
@@ -1,4 +1,4 @@
-.home {
+/* .home {
   min-width: 100vh;
   display: flex;
   flex-direction: column;
@@ -7,8 +7,8 @@
 .contact-container {
   width: 100%;
   max-width: 1440px;
-  /* margin: 0px auto; */
+  margin: 0px auto;
   padding: 80px 120px;
   margin-top: 80px !important;
   margin: 0 auto;
-}
+} */
