--- a/client/src/components/Feature/Feature.css
+++ b/client/src/components/Feature/Feature.css
@@ -1,10 +1,10 @@
-.feature-container {
+/* .feature-container {
   max-width: 1440px;
   width: 100%;
   padding: 80px 20px;
   margin: 0 auto;
-  /* Centers the container */
-}
+  Centers the container
+} */
 
 /* .feature-container .col-1 {
   display: flex;
