--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,9 +1,9 @@
-.footer-container {
+/* .footer-container {
   width: 100%;
   max-width: 1440px;
   margin: 0px auto;
   padding: 40px 20px 0px 20px;
-}
+} */
 
 /* .footer {
   background-color: var(--footer-background);
