--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -1,4 +1,4 @@
-.navbar {
+/* .navbar {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,13 +14,13 @@
   transition: background-color 0.3s ease-in-out;
 }
 
-/* .navbar-container {
+.navbar-container {
   max-width: 1440px;
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-} */
+}
 
 .hamburger {
   display: flex;
@@ -516,4 +516,4 @@ button {
 .overlay.show {
   opacity: 0.7;
   visibility: visible;
-}
+} */
