--- a/client/src/components/Register/Register.css
+++ b/client/src/components/Register/Register.css
@@ -1,10 +1,8 @@
-.home {
+/* .home {
   min-width: 100vh;
   display: flex;
   flex-direction: column;
-}
-
-
+} */
 
 /* .register-form {
   background: rgba(255, 255, 255, 0.1);
