--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -114,7 +114,7 @@
   background: black;
 }
 
-button {
+/* button {
   color: black;
   border: none;
   padding: 10px 15px;
@@ -122,7 +122,7 @@ button {
   border-radius: 5px;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
-}
+} */
 
 .icons {
   display: flex;
@@ -374,7 +374,7 @@ button {
   background: black;
 }
 
-button {
+/* button {
   color: black;
   border: none;
   padding: 10px 15px;
@@ -382,7 +382,7 @@ button {
   border-radius: 5px;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
-}
+} */
 
 .icons {
   display: flex;
