--- a/client/src/components/Contactus/contactus.css
+++ b/client/src/components/Contactus/contactus.css
@@ -1,4 +1,4 @@
-/* .home {
+.home {
   min-width: 100vh;
   display: flex;
   flex-direction: column;
@@ -11,4 +11,4 @@
   padding: 80px 120px;
   margin-top: 80px !important;
   margin: 0 auto;
-} */
+}
