--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,2 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700&display=swap");
 @import "tailwindcss";
+
+.no-scroll {
+  overflow: hidden;
+  height: 100vh;
+}
